Uninitialized string offset in main.inc Fixed for php >= 7.0 https://github.com/FrontAccountingERP/FA/commit/a5e042fa2afba68043390214d888a7d5493f0b9e https://frontaccounting.com/punbb/viewtopic.php?id=8653

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2020-01-16 Joe Hunt
+Uninitialized string offset in main.inc Fixed for php >= 7.0
+M	includes/main.inc
+
+2020-01-16 Joe Hunt
 Tax rate displayed twice in rep209 (Purchase orders). Fixed.
 M	reporting/rep209.php
 
