Fixed Assets Depreciation: removed invalid and obsolete audit record update. https://github.com/FrontAccountingERP/FA/commit/ba480840fbf40ae7e1b825a269c5672ef661deaf https://frontaccounting.com/punbb/viewtopic.php?id=8486 https://frontaccounting.com/punbb/viewtopic.php?pid=36845#p36845

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-01-18 Janusz Dobrowolski
+Fixed Assets Depreciation: removed invalid and obsolete audit record update.
+M	fixed_assets/includes/fixed_assets_db.inc
+
 2020-01-16 Joe Hunt
 Uninitialized string offset in main.inc Fixed for php >= 7.0
 M	includes/main.inc
