Customers/Suppliers/Items - Optimised and removed Menu in F2/F3/F4 popups https://github.com/FrontAccountingERP/FA/commit/a9e7141956ef0a60b58e9a627beee93cd35ed43c https://github.com/FrontAccountingERP/FA/commit/ed66cc3976ee61be8edfbf91947ee9ba6d3882e9 https://frontaccounting.com/punbb/viewtopic.php?id=8664

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2020-01-21/24 Joe Hunt
+Customers/Suppliers/Items - Optimised and removed Menu in F2/F3/F4 popups
+M	includes/ui/ui_controls.inc
+M	inventory/manage/items.php
+M	purchasing/manage/suppliers.php
+M	sales/manage/customers.php
+
 2020-01-18 Janusz Dobrowolski
 Fixed Assets Depreciation: removed invalid and obsolete audit record update.
 M	fixed_assets/includes/fixed_assets_db.inc
