Added NL_nl and NB_no installer language files from FA24Mods https://github.com/FrontAccountingERP/FA/commit/fd6a34b4c0d7e0af05ab5940eac6454fc499722d https://github.com/FrontAccountingERP/FA/commit/ada06adf18f07cadf551f33e03cad48a1875e489 https://frontaccounting.com/punbb/viewtopic.php?id=8082

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,11 @@
+2020-01-21/25 Janusz Dobrowolski
+Added NL_nl and NB_no installer language files from FA24Mods
+M	install/isession.inc
+A	install/lang/nb_NO/LC_MESSAGES/nb_NO.mo
+A	install/lang/nb_NO/LC_MESSAGES/nb_NO.po
+A	install/lang/nl_NL/LC_MESSAGES/nl_NL.mo
+A	install/lang/nl_NL/LC_MESSAGES/nl_NL.po
+
 2020-01-21/24 Joe Hunt
 Customers/Suppliers/Items - Optimised and removed Menu in F2/F3/F4 popups
 M	includes/ui/ui_controls.inc
