--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-01-29 Janusz Dobrowolski
+Bug 4904: Customer Credit Note - fixed invalid inventory GL postings for service items.
+M	sales/includes/db/sales_credit_db.inc
+
 2020-01-26 Janusz Dobrowolski
 @oakstreet1: Added support for views in Backup and Restore
 M	admin/db/maintenance_db.inc
