--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-02-05 Janusz Dobrowolski
+Gettext template updated. 
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
 2020-02-04 Joe Hunt
 Moved dates by 1 year in standard Chart SQLs
 M	sql/en_US-demo.sql
