--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-02-05 Joe Hunt
+Release 2.4.8
+M	version.php
+
 2020-02-05 Janusz Dobrowolski
 Gettext template updated. 
 M	lang/new_language_template/LC_MESSAGES/empty.po
