GL Account Transactions Report rep704 layout for no dimension 2 improved. https://github.com/FrontAccountingERP/FA/commit/63ae1f3e711999bb87e02c4a7fdab7fda6c3f5d1

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-02-17 Janusz Dobrowolski
+GL Account Transactions Report rep704 layout for no dimension 2 improved.
+M	reporting/rep704.php
+
 2020-02-11 Janusz Dobrowolski
 Customer, Supplier Payments - weak connection inconsistency addressed
 M	includes/ui/allocation_cart.inc
