Annual Expense Breakdown Report rep705 1000s print option added for annual totals. https://github.com/FrontAccountingERP/FA/commit/b1a0e08b3d9f684ef42959dee87cbfd52a5c439e https://github.com/FrontAccountingERP/FA/commit/690541d38346ab42d73b59431544a262d0d961c0 https://github.com/FrontAccountingERP/FA/commit/c9287db64df3006874cddf56d35705707a466936

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2020-02-17 Janusz Dobrowolski
+Annual Expense Breakdown Report rep705 1000s print option added for annual totals.
+M	reporting/rep705.php
+M	reporting/reports_main.php
+
+2020-02-17 Janusz Dobrowolski
 GL Account Transactions Report rep704 layout for no dimension 2 improved.
 M	reporting/rep704.php
 
