Quantity On Hand (QOH) Now Available On Inventory Adjustments https://github.com/FrontAccountingERP/FA/commit/1f1df7734d5568aafd7b35dbd91e295716fbb518 https://frontaccounting.com/punbb/viewtopic.php?id=8691

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-02-19 Joe Hunt
+Quantity On Hand (QOH) Now Available On Inventory Adjustments
+M	inventory/includes/item_adjustments_ui.inc
+
 2020-02-17 Janusz Dobrowolski
 Annual Expense Breakdown Report rep705 1000s print option added for annual totals.
 M	reporting/rep705.php
