Added missing closed.png icon to canvas, dropdown themes https://github.com/FrontAccountingERP/FA/commit/f01cb25258d7b619f820d8f78e9bccf4501fc58e https://github.com/FrontAccountingERP/FA/commit/0eda552245c826fb5431b4d02152623e91da4c88

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2020-02-19 Joe Hunt
+Added missing closed.png icon to canvas, dropdown themes
+A	themes/canvas/images/closed.png
+A	themes/dropdown/images/closed.png
+
+2020-02-19 Joe Hunt
 Quantity On Hand (QOH) Now Available On Inventory Adjustments
 M	inventory/includes/item_adjustments_ui.inc
 
