Bug 5083: Manufacturing creates bank transactions but void does not delete them. Fixed. https://github.com/FrontAccountingERP/FA/commit/e221114b610740861dae6b7b4af5d0af28abbe21

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-03-17 Joe Hunt
+Bug 5083: Manufacturing creates bank transactions but void does not delete them. Fixed.
+M	manufacturing/includes/db/work_order_costing_db.inc
+
 2020-02-19 Joe Hunt
 Added missing closed.png icon to canvas, dropdown themes
 A	themes/canvas/images/closed.png
