--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2020-03-17 Joe Hunt
+Bug 5081: Editing unallocated customer payment changes payment amount. Fixed.
+M	includes/ui/allocation_cart.inc
+
+2020-03-17 Joe Hunt
 Bug 5083: Manufacturing creates bank transactions but void does not delete them. Fixed.
 M	manufacturing/includes/db/work_order_costing_db.inc
 
