--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-05-15 Joe Hunt
+Deleting a fiscal year problem. Fixed.
+M	admin/db/fiscalyears_db.inc
+
 2020-04-07 Joe Hunt
 Bug 5106: Fixed field length for inserting kit, Foreign Item Codes.
 inventory/manage/item_codes.php
