Recurring invoices dimensions into gl_trans by company flag option. https://github.com/FrontAccountingERP/FA/commit/7226477a2624571ba8460f773092f6e38bbc46f3 https://frontaccounting.com/punbb/viewtopic.php?id=8802

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2020-05-16 Joe Hunt
+Recurring invoices dimensions into gl_trans by company flag option.
+M	admin/company_preferences.php
+M	sales/create_recurrent_invoices.php
+
 2020-05-15 Joe Hunt
 Deleting a fiscal year problem. Fixed.
 M	admin/db/fiscalyears_db.inc
