Bug in backups.php, 'protect', fixed. https://github.com/FrontAccountingERP/FA/commit/40e5dda3847073d8f86c558eafbbc5372133bedd https://frontaccounting.com/punbb/viewtopic.php?id=8811

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-05-23 Joe Hunt
+Bug in backups.php, 'protect', fixed.
+M	admin/backups.php
+
 2020-05-17 Joe Hunt
 Optimized reports rep115 and rep704.
 M	reporting/rep115.php
