Delivery Against Sales Order Inquiry View, Wrong Remainder Value. Fixed. https://github.com/FrontAccountingERP/FA/commit/406b264c2ff690cdfcd797aea92ba137baee8c8f https://frontaccounting.com/punbb/viewtopic.php?pid=37637#p37637

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-06-13 Joe Hunt
+Delivery Against Sales Order Inquiry View, Wrong Remainder Value. Fixed.
+M	sales/includes/db/sales_order_db.inc
+
 2020-05-23 Joe Hunt
 Bug in backups.php, 'protect', fixed.
 M	admin/backups.php
