Print Long Item Description on Invoice based on Company Setup SysPrefs Flag - long_description_invoice. https://github.com/FrontAccountingERP/FA/commit/b5f67d3dffd993ad74f63a04ad33ed2ff4bd61a6 https://frontaccounting.com/punbb/viewtopic.php?pid=37638#p37638 The second line can now optionally have Item description on a second line in the invoice in another language too, taken from the stock_master.long_description field. Standard Chart SQLs updated https://github.com/FrontAccountingERP/FA/commit/39cfd6e5b3170a5eddeffacef1d88e9796bcc418

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,10 @@
 2020-06-13 Joe Hunt
+Print Long Item Description on Invoice. Feature. Company Setup Flag.
+M	admin/company_preferences.php
+M	reporting/rep107.php
+M	sales/includes/db/cust_trans_details_db.inc
+
+2020-06-13 Joe Hunt
 Delivery Against Sales Order Inquiry View, Wrong Remainder Value. Fixed.
 M	sales/includes/db/sales_order_db.inc
 
