Currency range fix for invoice from 2017 in FA24Mods moved to core https://github.com/FrontAccountingERP/FA/commit/168c69772ccf5c63c948d947e71d5719d36d9b4e https://github.com/apmuthu/frontac24/commit/09dc4c8f51452222dbe41f17c5d4a2468a67cfda#diff-8c6b95b40f2be2b9ba5a620f33332dff http://frontaccounting.com/punbb/viewtopic.php?id=7181 https://github.com/FrontAccountingERP/FA/commit/6cdf5e7b364034c94751f31ba47af750c2eedc61

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,8 +1,14 @@
+2020-06-14 Joe Hunt
+Currency range fix for invoice from 2017 in FA24Mods moved to core
+M	reporting/rep107.php
+
 2020-06-13 Joe Hunt
 Print Long Item Description on Invoice. Feature. Company Setup Flag.
 M	admin/company_preferences.php
 M	reporting/rep107.php
 M	sales/includes/db/cust_trans_details_db.inc
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
 
 2020-06-13 Joe Hunt
 Delivery Against Sales Order Inquiry View, Wrong Remainder Value. Fixed.
