Trial Balance - Added Group totals only checkbox. https://github.com/FrontAccountingERP/FA/commit/c34d7c7f84e9882f1707ab8858e268b158be81d9 https://frontaccounting.com/punbb/viewtopic.php?id=8842 This reduces the long list of all accounts, imagine if you have 2000 asset accounts, 1000 liabilities, Income and Expenses,

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-06-22 Joe Hunt
+Trial Balance - Added Group totals only checkbox.
+M	gl/inquiry/gl_trial_balance.php
+
 2020-06-14 Joe Hunt
 Currency range fix for invoice from 2017 in FA24Mods moved to core
 M	reporting/rep107.php
