--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2020-07-04 Joe Hunt
+PHP 7.4 fixes for array subscript curly braces => square brackets
+M	gl/includes/db/gl_db_trans.inc
+M	reporting/includes/barcodes.php
+M	reporting/includes/tcpdf.php
+M	sales/includes/ui/sales_order_ui.inc
+
 2020-06-22 Joe Hunt
 Trial Balance - Added Group totals only checkbox.
 M	gl/inquiry/gl_trial_balance.php
