--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2020-07-06 Janusz Dobrowolski
+Additional syntax and PHP 7.4 compatibility fixes
+M	includes/session.inc
+M	includes/ui/ui_lists.inc
+M	reporting/includes/tcpdf.php
+
 2020-07-04 Joe Hunt
 PHP 7.4 fixes for array subscript curly braces => square brackets
 M	gl/includes/db/gl_db_trans.inc
