Install/Update Languages: fixed directory traversal issue https://github.com/FrontAccountingERP/FA/commit/e330ef6dc0633b6858d7b1f0016299d0f65e04b0 https://github.com/FrontAccountingERP/FA/issues/40

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-07-13 Janusz Dobrowolski
+Install/Update Languages: fixed directory traversal issue
+M	admin/inst_lang.php
+
 2020-07-06 Janusz Dobrowolski
 Additional syntax and PHP 7.4 compatibility fixes
 M	includes/session.inc
