Negative Inventory Adjustments not working anymore (2.4.8). Fixed https://github.com/FrontAccountingERP/FA/commit/c82b50895aad2e028092a3b362783149f81d8906 https://frontaccounting.com/punbb/viewtopic.php?id=8734

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-07-31 Joe Hunt
+Negative Inventory Adjustments not working anymore (2.4.8). Fixed
+M	inventory/includes/db/items_adjust_db.inc
+
 2020-07-13 Janusz Dobrowolski
 Install/Update Languages: fixed directory traversal issue
 M	admin/inst_lang.php
