Bug in Supplier Credit Note Edit, Fixed. https://github.com/FrontAccountingERP/FA/commit/2794a8e6430b932dd36830d35746c515d46fb75f https://frontaccounting.com/punbb/viewtopic.php?id=8889

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2020-07-31 Joe Hunt
+Bug in Supplier Credit Note Edit, Fixed.
+M	purchasing/includes/supp_trans_class.inc
+M	purchasing/supplier_credit.php
+
+2020-07-31 Joe Hunt
 Negative Inventory Adjustments not working anymore (2.4.8). Fixed
 M	inventory/includes/db/items_adjust_db.inc
 
