--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-08-02 Joe Hunt
+Journal Inquiry - Counter Party column not showing on invoice. Fixed.
+M	gl/includes/db/gl_db_trans.inc
+
 2020-07-31 Joe Hunt
 Bug in Supplier Credit Note Edit, Fixed.
 M	purchasing/includes/supp_trans_class.inc
