Bug 5178: Fixed customer selection via popup after missing inline customer search. https://github.com/FrontAccountingERP/FA/commit/44228f3af373146199525f7a865a23453f8009a8

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,11 @@
 2020-09-24 Janusz Dobrowolski
+Bug 5178: Fixed customer selection via popup after missing inline customer search.
+M	 includes/ui/ui_lists.inc
+M	 includes/ui/ui_view.inc
+M	 sales/includes/cart_class.inc
+M	 sales/includes/ui/sales_order_ui.inc 
+
+2020-09-24 Janusz Dobrowolski
 Bug 5220: Delivery to foreign customer against Prepaid Sales Order - GL Balance fixed
 M	 sales/includes/db/sales_delivery_db.inc
 
