Bug Fix: Purchase Order delete when invoking hook_db_prevoid() https://github.com/FrontAccountingERP/FA/commit/ae3a0561f97506ad4538a1027a192b970008de0b https://frontaccounting.com/punbb/viewtopic.php?id=9017

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-09-26 Joe Hunt
+Bug Fix: Purchase Order delete when invoking hook_db_prevoid()
+M	 purchasing/includes/db/po_db.inc
+
 2020-09-24 Janusz Dobrowolski
 Bug 5178: Fixed customer selection via popup after missing inline customer search.
 M	 includes/ui/ui_lists.inc
