Bug 5200: filename length check limits 60 chars to avoid unexpected error on long names. https://github.com/FrontAccountingERP/FA/commit/60472abbf7dddcf643204ba5d0d1f4a9feb82872

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-09-26 Janusz Dobrowolski
+Bug 5200: filename length check limits 60 chars to avoid unexpected error on long names.
+M	 admin/attachments.php
+
 2020-09-26 Joe Hunt
 Bug Fix: Purchase Order delete when invoking hook_db_prevoid()
 M	 purchasing/includes/db/po_db.inc
