--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,13 @@
 2020-09-26 Janusz Dobrowolski
+Bug 5179: Added max parameter to textarea*() helpers, put into all memo/comments input fields
+M	 admin/crm_categories.php
+M	 fixed_assets/process_depreciation.php
+M	 includes/ui/ui_input.inc
+M	 manufacturing/includes/work_order_issue_ui.inc
+M	 purchasing/includes/ui/po_ui.inc
+M	 sales/includes/ui/sales_order_ui.inc (changes included on 24th)
+
+2020-09-26 Janusz Dobrowolski
 Bug 5200: filename length check limits 60 chars to avoid unexpected error on long names.
 M	 admin/attachments.php
 
