Bug 5213: Additional cleanup https://github.com/FrontAccountingERP/FA/commit/dab9179f6d090c402dc4bf926cfd62a7879032bc

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-09-28 Janusz Dobrowolski
+Bug 5213: Additional cleanup
+M	 inventory/includes/db/items_adjust_db.inc
+
 2020-09-27 Janusz Dobrowolski
 Bug 5198 @Bobby Lin: Attach Documents: constrained attachment file types to avoid XSS using javascript in SVG.
 M	 admin/attachments.php
