--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2020-09-30 Janusz Dobrowolski
+Bug 5223: Fixed Asset Purchase, Direct Supplier Invoice: fixed invalid cost handling for invoices in foreign currency.
+M	purchasing/includes/purchasing_db.inc
+
+2020-09-30 Janusz Dobrowolski
 Bug 5170: Fixed Assets Purchase: fixed error on items with long description, removed sparse fields edition in Fixed Assets.
 M	inventory/manage/items.php
 M	purchasing/includes/purchasing_db.inc
