--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-10-02 Joe Hunt
+Bug 5232: A disposed fixed asset still appears in the fixed assets valuation report with a non-zero price. Fixed and rerun.
+M	reporting/rep451.php
+
 2020-09-30 Janusz Dobrowolski
 Bug 5223: Fixed Asset Purchase, Direct Supplier Invoice: fixed invalid cost handling for invoices in foreign currency.
 M	purchasing/includes/purchasing_db.inc
