Bug 5214: Stock Check Sheet: changed shortages option name to be less confusing. https://github.com/FrontAccountingERP/FA/commit/630e99edecc3eabe708a9e7bda94eaa60bf16db7

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-10-05 Janusz Dobrowolski
+Bug 5214: Stock Check Sheet: changed shortages option name to be less confusing.
+M	reporting/reports_main.php
+
 2020-10-02 Joe Hunt
 Bug 5232: A disposed fixed asset still appears in the fixed assets valuation report with a non-zero price. Fixed and rerun.
 M	reporting/rep451.php
