Fixed error in line 1 in tcpdf.php introduced on 2020-07-04 https://github.com/FrontAccountingERP/FA/commit/e685a94465fe8f26c8ff3789242b43c1c20054cf#diff-9ff4999e462e973fa833e3128a1c6a53 Error introduced in: https://github.com/FrontAccountingERP/FA/commit/de2da4b73a8505f8e6032bb04b26d859339c89f4#diff-9ff4999e462e973fa833e3128a1c6a53

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2020-10-05 Janusz Dobrowolski
+Fixed error in line 1 in tcpdf.php introduced on 2020-07-04
+M	reporting/includes/tcpdf.php
+
+2020-10-05 Janusz Dobrowolski
 Bug 5214: Stock Check Sheet: changed shortages option name to be less confusing.
 M	reporting/reports_main.php
 
