Bug 5202: Supplier Payment: Fixed allocation table refresh after change in supplier selector. https://github.com/FrontAccountingERP/FA/commit/5189bc26f377d678d0a3d88a2b623d69c0e1a278

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2020-09-28 Janusz Dobrowolski
+Bug 5202: Supplier Payment: Fixed allocation table refresh after change in supplier selector.
+M	 purchasing/supplier_payment.php
+
+2020-09-28 Janusz Dobrowolski
 Bug 5213: Additional cleanup
 M	 inventory/includes/db/items_adjust_db.inc
 
