Display company name on invoices even if the logo is set. https://github.com/FrontAccountingERP/FA/commit/f6f71daaad95fbdb507ce5644534331c9fb94ada

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-10-07 Joe Hunt
+Display company name on invoices even if the logo is set.
+M	reporting/includes/header2.inc
+
 2020-10-05 Janusz Dobrowolski
 Bug 5209: Fixed broken reports after session timeout.
 M	includes/page/header.inc
