--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-10-13 Joe Hunt
+Bug 5186: The field lengths of item_codes.description and purch_data.supplier_description don't match. Temporary fix, final fix in 2.5.
+M	inventory/includes/db/items_purchases_db.inc
+
 2020-10-07 Joe Hunt
 Bug 5187: Displaying suppliers list in the void part is either wrong or buggy. Fixed. Same bug in View or Print Transactions. Fixed.
 M	admin/view_print_transaction.php
