--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2020-10-13 Janusz Dobrowolski
+Bug 5190: Supplier Invoices fixed clearing unnecessary customer reference field on supplier selection change.
+M	purchasing/includes/db/invoice_db.inc
+M	purchasing/includes/ui/invoice_ui.inc
+
+2020-10-13 Janusz Dobrowolski
 Bug 5188: Fixed Attach Documents user interface to reset input fields only when needed.
 M	admin/attachments.php
 
