Improved layout default login form https://github.com/FrontAccountingERP/FA/commit/b49c0b769dfe67c80f4dac32be8f24fd2fdd1372

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-10-22 Joe Hunt
+Improved layout default login form
+M	themes/default/default.css
+
 2020-10-13 Janusz Dobrowolski
 Bug 5190: Supplier Invoices fixed clearing unnecessary customer reference field on supplier selection change.
 M	purchasing/includes/db/invoice_db.inc
