Report Audit Trail rep710. Added totals when Trans Type is selected https://github.com/FrontAccountingERP/FA/commit/2a80044afea0bf156f1d9061ac5287fada240a24 https://frontaccounting.com/punbb/viewtopic.php?id=9064 Beware of adding apples and oranges. The Action column can be "Changed" or "Closed" for which there is no filter in the form request.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-11-16 Joe Hunt
+Report Audit Trail rep710. Added totals when Trans Type is selected
+M	reporting/rep710.php
+
 2020-10-26 Janusz Dobrowolski
 Bugs 5189, 5211: Items, Company Setup - check for uploaded image compatibility with TCPDF report generator.
 M	admin/company_preferences.php
