Bug 5263: Add update button for total on supplier invoice entry when tax is changed. Fixed. https://github.com/FrontAccountingERP/FA/commit/f192e88b16ff3cfa910fd5b1dc59e9c15219b0ac

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2020-11-23 Joe Hunt
+Bug 5263: Add update button for total on supplier invoice entry when tax is changed. Fixed.
+M	purchasing/includes/ui/invoice_ui.inc
+M	purchasing/supplier_invoice.php
+
 2020-11-16 Joe Hunt
 Report Audit Trail rep710. Added totals when Trans Type is selected
 M	reporting/rep710.php
