No supplier trans found for given params in Supplier Payment. Fixed. https://github.com/FrontAccountingERP/FA/commit/e1ba133463ff567e87d812a5d1663fb66b70a072 https://frontaccounting.com/punbb/viewtopic.php?id=9091

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2020-11-28 Joe Hunt
+No supplier trans found for given params in Supplier Payment. Fixed.
+M	includes/ui/allocation_cart.inc
+M	purchasing/includes/db/po_db.inc
+
 2020-11-23 Joe Hunt
 Bug 5263: Add update button for total on supplier invoice entry when tax is changed. Fixed.
 M	purchasing/includes/ui/invoice_ui.inc
