Compatibility fix for commit on 2020-09-28 (php < 5.4) Moved to core from FA24Mods https://github.com/FrontAccountingERP/FA/commit/6c755559d6cd5a6f1d2e47daef4c3d71f4b59279 https://frontaccounting.com/punbb/viewtopic.php?id=9097

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
+2020-12-16 Joe Hunt
+Compatibility fix for commit on 2020-09-28 (php < 5.4)
+M	gl/includes/db/gl_db_bank_accounts.inc
+
 2020-12-14 Joe Hunt
+FA 2.4.9
 M	version.php
 
 2020-12-14 Janusz Dobrowolski
