Fixed Purchase Order pdf printout https://github.com/FrontAccountingERP/FA/commit/8850688519e49a17c57a96f9efab339919b1936d https://frontaccounting.com/punbb/viewtopic.php?id=9121

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-12-17 Joe Hunt
+Fixed Purchase Order pdf printout
+M	reporting/rep209.php
+
 2020-12-16 Joe Hunt
 Compatibility fix for commit on 2020-09-28 (php < 5.4)
 M	gl/includes/db/gl_db_bank_accounts.inc
