@notrinos: Item Adjustments Note disable rounding of Unit Cost. Fixed. https://github.com/FrontAccountingERP/FA/commit/b7f6a055f58ce71ef706b51de2168b1131ef29d4 https://frontaccounting.com/punbb/viewtopic.php?id=9108 https://frontaccounting.com/punbb/viewtopic.php?pid=38779#p38779 Corrected commit on 2019-06-28 at https://github.com/FrontAccountingERP/FA/commit/ead8970cab93706f8ffdd430236e81b61af31baa

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-12-18 Joe Hunt
+Item Adjustments Note disable rounding of Unit Cost. Fixed.
+M	inventory/includes/item_adjustments_ui.inc
+
 2020-12-17 Joe Hunt
 Fixed Purchase Order pdf printout
 M	reporting/rep209.php
