Fixed volatile error on first installer page shown & rerun https://github.com/FrontAccountingERP/FA/commit/667d49c80d1622fc2185cf3cbfd0f6845c02b369 https://github.com/FrontAccountingERP/FA/commit/3f85107455c99641da8bd688df73871fdac5e163

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-12-23/29 Janusz Dobrowolski
+Fixed volatile error on first installer page shown & rerun
+M	install/isession.inc
+
 2020-12-18 Joe Hunt
 Item Adjustments Note disable rounding of Unit Cost. Fixed.
 M	inventory/includes/item_adjustments_ui.inc
