Wrong target focus in accruals.php fixed. https://github.com/FrontAccountingERP/FA/commit/bed967958109e539eb629f17ba9a38262cfb00a2 https://frontaccounting.com/punbb/viewtopic.php?id=9139

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-01-08 Joe Hunt
+Wrong target focus in accruals.php fixed.
+M	gl/accruals.php
+
 2020-12-23/29 Janusz Dobrowolski
 Fixed volatile error on first installer page shown & rerun
 M	install/isession.inc
