Rep 704 GL A/c Txns report shows html code on Person/Item if PT_WORKORDER. Fixed. https://github.com/FrontAccountingERP/FA/commit/da6c825ef26c6bc0fefeb97328a85b9e9c04f46b https://frontaccounting.com/punbb/viewtopic.php?id=9140

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-01-09 Joe Hunt
+Rep 704 GL A/c Txns report shows html code on Person/Item if PT_WORKORDER. Fixed.
+M	reporting/rep704.php
+
 2021-01-08 Joe Hunt
 Wrong target focus in accruals.php fixed.
 M	gl/accruals.php
