Call to undefined count_array() in pdf_report.inc. Fixed. https://github.com/FrontAccountingERP/FA/commit/71873d2aa3608905a5348b00a44d1306f18263b6 https://frontaccounting.com/punbb/viewtopic.php?id=9142

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-01-09 Joe Hunt
+Call to undefined count_array() in pdf_report.inc. Fixed.
+M	reporting/includes/pdf_report.inc
+
+2021-01-09 Joe Hunt
 Rep 704 GL A/c Txns report shows html code on Person/Item if PT_WORKORDER. Fixed.
 M	reporting/rep704.php
 
