--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-01-10 Joe Hunt
+Undefined variable: problemTransaction after enter a bank transfer. Fixed.
+M	gl/bank_transfer.php
+
+2021-01-10 Joe Hunt
 Rerun of Rep 704 GL A/c Txns report shows html code on Person/Item.
 M	includes/types.inc
 M	reporting/rep601.php
