--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-01-11 Joe Hunt
+Bug 5310: DB error when on supplier invoice edit if current fiscal year is missing. Fixed.
+M	purchasing/includes/db/invoice_db.inc
+
 2021-01-10 Joe Hunt
 Undefined variable: problemTransaction after enter a bank transfer. Fixed.
 M	gl/bank_transfer.php
