Wrong security area passed in generalledger.php. Fixed. https://github.com/FrontAccountingERP/FA/commit/a498e7ba1a3932bf292c8ce9a1cf12adc01bd6ba https://frontaccounting.com/punbb/viewtopic.php?pid=38930#p38930

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-01-15 Joe Hunt
+Wrong security area passed in generalledger.php. Fixed.
+M	applications/generalledger.php
+
 2021-01-11 Joe Hunt
 Bug 5310: DB error when on supplier invoice edit if current fiscal year is missing. Fixed.
 M	purchasing/includes/db/invoice_db.inc
