Bug 5326 fix moved to core. Synched with upstream. https://github.com/FrontAccountingERP/FA/commit/a3a7b7f04ec0c7c6bec675533e34a5a52d9ece7a https://frontaccounting.com/punbb/viewtopic.php?id=9179

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-01-31 Joe Hunt
+Bug 5326 rerun for PHP < 5.5
+M	includes/archive.inc
+
 2021-01-21 Joe Hunt
 Fixed PHP 7.4 bug in function get_tag_name()
 M	admin/db/tags_db.inc
