--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2021-01-20 Janusz Dobrowolski
+Bug 5322: Added message on failed Login / Timeout
+M	access/login.php
+M	includes/current_user.inc
+M	includes/session.inc
+
 2021-01-15 Joe Hunt
 Wrong security area passed in generalledger.php. Fixed.
 M	applications/generalledger.php
