Bug 5326: Languages/Extensions/Themes/CoA module installation warnings fixed. https://github.com/FrontAccountingERP/FA/commit/4022094621f5bdb8951fdf24c6074fe552dc5173 https://www.php.net/manual/en/function.unpack.php The "Z" code was added in PHP 5.5 for NULL-padded strings, and removes trailing NULL bytes.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-01-20 Janusz Dobrowolski
+Bug 5326: Languages/Extensions/Themes/CoA module installation warnings fixed.
+M	includes/archive.inc
+
+2021-01-20 Janusz Dobrowolski
 Bug 5322: Added message on failed Login / Timeout
 M	access/login.php
 M	includes/current_user.inc
