Fixed PHP 7.4 bug in function get_tag_name() https://github.com/FrontAccountingERP/FA/commit/ad368eab7bb7042070c9d5222c631d7aa299f43b

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-01-21 Joe Hunt
+Fixed PHP 7.4 bug in function get_tag_name()
+M	admin/db/tags_db.inc
+
 2021-01-20 Janusz Dobrowolski
 Bug 5326: Languages/Extensions/Themes/CoA module installation warnings fixed.
 M	includes/archive.inc
