--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-02-04 Joe Hunt
+Customer/Supplier Payments Recording bug fixed. 
+M	includes/ui/allocation_cart.inc
+
 2021-01-31 Joe Hunt
 Bug 5326 rerun for PHP < 5.5
 M	includes/archive.inc
