Bug 5310: DB error fixed on bank payment/transfer edit on missing fiscal year. https://github.com/FrontAccountingERP/FA/commit/a131056057ace6c8e61eafabd7d78ef36bb8d4bb https://frontaccounting.com/punbb/viewtopic.php?id=9190 http://mantis.frontaccounting.com/view.php?id=5338 http://mantis.frontaccounting.com/view.php?id=5310

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-02-11 Joe Hunt
+Bug 5310: DB error fixed on bank payment/transfer edit on missing fiscal year.
+M	gl/includes/db/gl_db_banking.inc
+
 2021-02-04 Joe Hunt
 Customer/Supplier Payments Recording bug fixed. 
 M	includes/ui/allocation_cart.inc
