Bug 5332: Rep709 Tax Report - fixed multiple entries for a single tax line. https://github.com/FrontAccountingERP/FA/commit/14e0807fc87e0096af43f414f98764a6f8c8a4a8 https://frontaccounting.com/punbb/viewtopic.php?id=9046 http://mantis.frontaccounting.com/view.php?id=5332

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-02-11 Joe Hunt
+Bug 5332: Rep709 Tax Report - fixed multiple entries for a single tax line.
+M	reporting/rep709.php
+
+2021-02-11 Joe Hunt
 Bug 5310: DB error fixed on bank payment/transfer edit on missing fiscal year.
 M	gl/includes/db/gl_db_banking.inc
 
