Bug 5352: missing global declaration in reset_form() in attachments.php. Fixed. https://github.com/FrontAccountingERP/FA/commit/220f68cab16f746b276c7eaefba368ce6654178a http://mantis.frontaccounting.com/view.php?id=5352

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2021-02-15 Joe Hunt
+Bug 5352: missing global declaration in reset_form() in attachments.php. Fixed.
+M	admin/attachments.php
+
+2021-02-15 Joe Hunt
 Bug 5351: dim dim2 not defined in lines 623, 627 of purchasing/includes/db/invoice_db.inc. Fixed.
 M	purchasing/includes/db/invoice_db.inc
 
