--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-02-19 Joe Hunt
+Bug 5360: Typo in customer_allocate.php fixed.
+M	sales/allocations/customer_allocate.php
+
 2021-02-15 Joe Hunt
 PHP 7.4 Bugs in some reports.
 M	reporting/rep101.php
