Fixed javascript error appearing on themes using SVGElements. https://github.com/FrontAccountingERP/FA/commit/d34b343494b41494469fc0c2887ad85e6712ea32 https://frontaccounting.com/punbb/viewtopic.php?pid=39167#p39167

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-02-28 Janusz Dobrowolski
+Fixed javascript error appearing on themes using SVGElements.
+M	js/behaviour.js
+
 2021-02-19 Joe Hunt
 Bug 5360: Typo in customer_allocate.php fixed.
 M	sales/allocations/customer_allocate.php
