Inventory Purchasing Report (rep306.php) permission SA_SALESANALYTIC => SA_SUPPLIERANALYTIC https://github.com/FrontAccountingERP/FA/commit/6351305b2b0e5782804ab4d9e3db5f84b671d6f2 https://frontaccounting.com/punbb/viewtopic.php?id=9210

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-02-28 Joe Hunt
+Inventory Purchasing Report (rep306.php) permission SA_SALESANALYTIC => SA_SUPPLIERANALYTIC
+M	reporting/rep306.php
+
 2021-02-28 Janusz Dobrowolski
 Fixed javascript error appearing on themes using SVGElements.
 M	js/behaviour.js
