--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2021-03-10 Joe Hunt
+Function get_magic_quotes_gpc() is deprecated php7.4. Fixed.
+M	install/isession.inc
+
 2021-02-28 Joe Hunt
 Inventory Purchasing Report (rep306.php) permission SA_SALESANALYTIC => SA_SUPPLIERANALYTIC
 M	reporting/rep306.php
